--- a/templates/pages/sks-admin-interface/create-club-form.html
+++ b/templates/pages/sks-admin-interface/create-club-form.html
@@ -70,9 +70,12 @@
                 <option value="programming">Programming</option>
                 <option value="art">Art</option>
             </select>
+            <input class="input-field" type="number" name="numOfMembers" placeholder="Number of Members" required>
             <input type="text" class="club-achievment" name="clubAchievment1" id= "clubAchievment1" placeholder="Club's Achievment">
             <input type="text" class="club-achievment" name="clubAchievment2" id= "clubAchievment2" placeholder="Club's Achievment">
             <input type="text" class="club-achievment" name="clubAchievment3" id= "clubAchievment3" placeholder="Club's Achievment">
+            <input type="text" class="club-achievment" name="clubAchievment4" id= "clubAchievment3" placeholder="Club's Achievment">
+            <input type="text" class="club-achievment" name="clubAchievment5" id= "clubAchievment3" placeholder="Club's Achievment">
             <div class="area-div">
             <textarea class="input-field club-vision-input" name="clubvision" id="club-vision-input" placeholder="Club Vision" required></textarea>
             <strong class="vision-error">The club vision should be between 200-3000 letter</strong>
