--- a/templates/pages/club-manager-interface/event-post.html
+++ b/templates/pages/club-manager-interface/event-post.html
@@ -44,7 +44,10 @@
                 <label for="p-c-name">Club Name:</label>
             <input class="input-field" type="text" name="clubname" id="p-c-name" placeholder="e.g Paddle Pros" required>
             </div>
-
+            <div class="input-wrapper">
+              <label for="a-cm-name">Club Manager Name:</label>
+          <input class="input-field" type="text" name="clubmanager" id="a-cm-name" placeholder="e.g Nouhad El Hallab" required>
+          </div>
             <div class="input-wrapper ms-lg-5">
               <label for="p-e-title">Event Title:</label>
           <input class="input-field event-title-input" type="text" name="eventtitle" id="p-e-title" placeholder="Event Title" required>
