--- a/templates/pages/all-users-interface/events.html
+++ b/templates/pages/all-users-interface/events.html
@@ -66,265 +66,34 @@
           <div class="no-clubs-events-matches hidden-div">
               <h3 class="text-black-50 fs-5">No Events Found</h3>
           </div>
-            <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
+          {% for EventActivity in activity reversed %}
+          {% if EventActivity.approved %}
+            <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "{{ EventActivity.categories }}">
                         <div class="image-wrapper">
-                            <a href="{% url 'eventPage'%}">
-                        <img src="{% static 'images/hiking-event.jpg' %}" class="card-img-top event-img" alt="let's Hike Event">
-                        <div class="event-date date-to-style" data-date = "2024-04-27">
-                        <span><span class="event-day">27 </span><span class="event-month">Apr</span></span>
+                            <a href="{% url 'eventPage' pk=EventActivity.id %}">
+                        <img src="{{ EventActivity.event_image.url }}" class="card-img-top event-img" alt="{{ EventActivity.eventtitle }}">
+                        <div class="event-date date-to-style" data-date = "{{ EventActivity.date }}">
+                        <span><span class="event-day">{{ EventActivity.date.day }}</span><span class="event-month">{{ EventActivity.date|date:"M" }}</span></span>
                         <hr>
-                        <span class="event-time">8:00 pm</span>
+                        <span class="event-time">{{ EventActivity.time|time:"h:i A" }}</span>
                     </div>
                     </a>
                     </div>
                     
                     <div class="card-body">
-                        <h5 class="card-title mt-5">Let's Hike Together</h5>
-                        <p class="card-text text-black-50">Embark on an unforgettable hiking journey to conquer the summit of Büyük Camlica Hill.
-                             Experience breathtaking views, diverse wildlife, and camaraderie. Join us for adventure!</p>
+                        <h5 class="card-title mt-5">{{EventActivity.eventtitle}}</h5>
+                        <p class="card-text text-black-50">{{EventActivity.description|truncatewords:20}}</p>
                         <div class="info-list">
-                            <a href="{% url 'eventPage'%}"><button type="button" class="main-btn more-info-btn">More Info</button></a>
+                            <a href="{% url 'eventPage' pk=EventActivity.id %}"><button type="button" class="main-btn more-info-btn">More Info</button></a>
                             <span class="add-to-list-btn add-to-list-plus"></span>
                         </div>
                 </div>
             </div>
-            <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
-                <div class="image-wrapper">
-                    <a href="#">
-                <img src="{% static 'images/run-for-fun-event.jpg' %}" class="card-img-top event-img" alt="Running event">
-                <div class="event-date date-to-style" data-date = "2024-06-20">
-                <span><span class="event-day">20 </span><span class="event-month">Jun</span></span>
-                <hr>
-                <span class="event-time">3:30 pm</span>
-            </div>
-            </a>
-            </div>
-            
-            <div class="card-body">
-                <h5 class="card-title mt-5">Run For Fun</h5>
-                <p class="card-text text-black-50">Gear up for an exhilarating urban adventure at the "Urban Rush: Istanbul City Marathon.
-                    " Join thousands of runners as we race through iconic landmarks and vibrant neighborhoods of Istanbul.</p>
-                <div class="info-list">
-                    <a href="#"><button type="button" class="main-btn more-info-btn">More Info</button></a>
-                    <span class="add-to-list-btn add-to-list-plus"></span>
-                </div>
+            {% endif %}  
+          {% endfor %}  
         </div>
-    </div>
-        <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
-            <div class="image-wrapper">
-                <a href="#">
-            <img src="{% static 'images/volley-ball-event.jpg' %}" class="card-img-top event-img" alt="volleyBall match Event">
-            <div class="event-date date-to-style" data-date = "2024-04-30">
-            <span><span class="event-day">30 </span><span class="event-month">Apr</span></span>
-            <hr>
-            <span class="event-time">7:00 pm</span>
-        </div>
-        </a>
-        </div>
-        
-        <div class="card-body">
-            <h5 class="card-title mt-5">VolleyBall Match</h5>
-            <p class="card-text text-black-50">Dive into the excitement of beach volleyball at the "Bosphorus Beach Volleyball Bash"!
-                 Join us for an action-packed match on the sandy shores of Istanbul's iconic Bosphorus coastline.</p>
-            <div class="info-list">
-                <a href="#"><button type="button" class="main-btn more-info-btn">More Info</button></a>
-                <span class="add-to-list-btn add-to-list-plus"></span>
-            </div>
-    </div>
-    </div>
-    <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "art">
-        <div class="image-wrapper">
-            <a href="#">
-        <img src="{% static 'images/artisan-alias-event.jpg' %}" class="card-img-top event-img" alt="Art Workshop event">
-        <div class="event-date date-to-style" data-date = "2024-04-18">
-        <span><span class="event-day">18 </span><span class="event-month">Apr</span></span>
-        <hr>
-        <span class="event-time">6:00 pm</span>
-    </div>
-    </a>
-    </div>
-
-    <div class="card-body">
-        <h5 class="card-title mt-5">Art Workshop And Skill Shares</h5>
-        <p class="card-text text-black-50">Unleash your creativity at our "Creative Convergence" event!
-             Join fellow artists and enthusiasts for a day of inspiring art workshops and skill shares,
-              where you can learn, create, and connect.</p>
-        <div class="info-list">
-            <a href="#"><button type="button" class="main-btn more-info-btn">More Info</button></a>
-            <span class="add-to-list-btn add-to-list-plus"></span>
-        </div>
-    </div>
-    </div>
-    <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "society">
-        <div class="image-wrapper">
-            <a href="#">
-        <img src="{% static 'images/let-us-scout-event.jpg' %}" class="card-img-top event-img" alt="Scout club">
-        <div class="event-date date-to-style" data-date = "2024-04-20">
-        <span><span class="event-day">20 </span><span class="event-month">Apr</span></span>
-        <hr>
-        <span class="event-time">4:00 pm</span>
-    </div>
-    </a>
-    </div>
-
-    <div class="card-body">
-        <h5 class="card-title mt-5">Let's Scout</h5>
-        <p class="card-text text-black-50">Join us for a thrilling Scout Adventure in Istanbul's wilderness.
-             Explore nature, learn survival skills, and build friendships through hiking, workshops, and team challenges.
-              Don't miss this unforgettable outdoor experience!</p>
-        <div class="info-list">
-            <a href="#"><button type="button" class="main-btn more-info-btn">More Info</button></a>
-            <span class="add-to-list-btn add-to-list-plus"></span>
-        </div>
-    </div>
-    </div>
-    <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "programming">
-        <div class="image-wrapper">
-            <a href="#">
-        <img src="{% static 'images/mobile-development-upcoming-event.png' %}" class="card-img-top event-img" alt="Mobile development event">
-        <div class="event-date date-to-style" data-date = "2024-05-07">
-        <span><span class="event-day">07 </span><span class="event-month">May</span></span>
-        <hr>
-        <span class="event-time">11:00 am</span>
-    </div>
-    </a>
-    </div>
-
-    <div class="card-body">
-        <h5 class="card-title mt-5">Mobile Minds: Exploring the World of App Development</h5>
-        <p class="card-text text-black-50">Welcome to 'Mobile Minds: Exploring the World of App Development',
-             your go-to podcast for all things mobile development! Join us on a journey through the latest trends,
-              technologies, and insights shaping the fast-paced world of app creation.
-               Whether you're an experienced developer seeking advanced techniques or a newcomer eager to learn the ropes,
-                our podcast offers valuable discussions, expert interviews,
-                 and practical tips to help you excel in the mobile development landscape.
-                  Get ready to expand your mobile mindset and unleash your creativity in the ever-evolving world
-                   of app development!</p>
-        <div class="info-list">
-            <a href="#"><button type="button" class="main-btn more-info-btn">More Info</button></a>
-            <span class="add-to-list-btn add-to-list-plus"></span>
-        </div>
-    </div>
-    </div>
-    <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "gaming">
-        <div class="image-wrapper">
-            <a href="#">
-        <img src="{% static 'images/gaming-vr-upcoming-event.png' %}" class="card-img-top event-img" alt="gaming VR event">
-        <div class="event-date date-to-style" data-date = "2024-05-09">
-        <span><span class="event-day">09 </span><span class="event-month">May</span></span>
-        <hr>
-        <span class="event-time">2:00 pm</span>
-    </div>
-    </a>
-    </div>
-
-    <div class="card-body">
-        <h5 class="card-title mt-5">Virtual Realms: Gaming in the VR Universe</h5>
-        <p class="card-text text-black-50">Step into 'Virtual Realms: Gaming in the VR Universe' for an unparalleled gaming adventure!
-             Immerse yourself in cutting-edge VR technology, thrilling demos, and competitive tournaments.
-              Whether you're a seasoned VR enthusiast or new to the experience, there's something for everyone.
-               Join us and explore the limitless possibilities of the VR universe!</p>
-        <div class="info-list">
-            <a href="#"><button type="button" class="main-btn more-info-btn">More Info</button></a>
-            <span class="add-to-list-btn add-to-list-plus"></span>
-        </div>
-    </div>
-    </div>
-    <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
-        <div class="image-wrapper">
-            <a href="#">
-        <img src="{% static 'images/ping-pong-event.jpg' %}" class="card-img-top event-img" alt="Paddle Pros club">
-        <div class="event-date date-to-style" data-date = "2024-03-22">
-        <span><span class="event-day">22 </span><span class="event-month">Mar</span></span>
-        <hr>
-        <span class="event-time">8:00 pm</span>
-    </div>
-    </a>
-    </div>
-
-    <div class="card-body">
-        <h5 class="card-title mt-5">Ping Pong Tournament</h5>
-        <p class="card-text text-black-50">Experience the thrill of intense competition at our Table Tennis Tournament.
-             Join us for fast-paced matches, expert coaching clinics, and exciting exhibitions. Open to players of all levels.
-              Don't miss the chance to showcase your skills and compete for victory!</p>
-        <div class="info-list">
-            <a href="#"><button type="button" class="main-btn more-info-btn">More Info</button></a>
-            <span class="add-to-list-btn add-to-list-plus"></span>
-        </div>
-    </div>
-    </div>
-    <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "technology">
-        <div class="image-wrapper">
-            <a href="#">
-        <img src="{% static 'images/tech-titans-event.jpg' %}" class="card-img-top event-img" alt="technology event">
-        <div class="event-date date-to-style" data-date = "2024-04-13">
-        <span><span class="event-day">13 </span><span class="event-month">Apr</span></span>
-        <hr>
-        <span class="event-time">3:30 pm</span>
-    </div>
-    </a>
-    </div>
-
-    <div class="card-body">
-        <h5 class="card-title mt-5">Hackathons</h5>
-        <p class="card-text text-black-50">Host hackathons where members can collaborate in teams
-             to solve real-world problems using technology. Set specific challenges or themes and
-              provide mentors to guide participants throughout the event</p>
-        <div class="info-list">
-            <a href="#"><button type="button" class="main-btn more-info-btn">More Info</button></a>
-            <span class="add-to-list-btn add-to-list-plus"></span>
-        </div>
-    </div>
-    </div>
-    <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
-        <div class="image-wrapper">
-            <a href="#">
-        <img src="{% static 'images/yoga-event.jpg' %}" class="card-img-top event-img" alt="Yoga event">
-        <div class="event-date date-to-style" data-date = "2024-05-03">
-        <span><span class="event-day">03 </span><span class="event-month">May</span></span>
-        <hr>
-        <span class="event-time">2:30 pm</span>
-    </div>
-    </a>
-    </div>
-
-    <div class="card-body">
-        <h5 class="card-title mt-5"> Yoga and Mindfulness Retreat</h5>
-        <p class="card-text text-black-50">
-            Unwind and find serenity at our Yoga and Mindfulness Event. Join us for a day of gentle yoga,
-             meditation, and wellness workshops. Connect with your inner self and experience peace amidst
-              the chaos of everyday life.</p>
-        <div class="info-list">
-            <a href="#"><button type="button" class="main-btn more-info-btn">More Info</button></a>
-            <span class="add-to-list-btn add-to-list-plus"></span>
-        </div>
-    </div>
-    </div>
-    <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "society">
-        <div class="image-wrapper">
-            <a href="#">
-        <img src="{% static 'images/gardening-workshop-event.jpg' %}" class="card-img-top event-img" alt="garden workshop event">
-        <div class="event-date date-to-style" data-date = "2024-04-12">
-        <span><span class="event-day">12 </span><span class="event-month">Apr</span></span>
-        <hr>
-        <span class="event-time">8:00 pm</span>
-    </div>
-    </a>
-    </div>
-
-    <div class="card-body">
-        <h5 class="card-title mt-5">Green Thumb Gathering: Gardening Workshop</h5>
-        <p class="card-text text-black-50">Join our Green Thumb Gathering for an enriching Gardening Workshop.
-             Dive into the world of plants as we explore gardening techniques, plant care tips, and sustainable practices.
-              Cultivate your passion for gardening and grow your own green oasis.</p>
-        <div class="info-list">
-            <a href="#"><button type="button" class="main-btn more-info-btn">More Info</button></a>
-            <span class="add-to-list-btn add-to-list-plus"></span>
-        </div>
-    </div>
-    </div>
-        </div>
-      </div>
+       </div>
+    </div>    
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/all.min.js' %}"></script>
