--- a/templates/pages/all-users-interface/club-profile.html
+++ b/templates/pages/all-users-interface/club-profile.html
@@ -216,71 +216,31 @@
           <div class="no-clubs-events-matches hidden-div">
               <h3 class="text-black-50 fs-5">No Events Found</h3>
           </div>
-            <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
-                        <div class="image-wrapper">
-                            <a href="#">
-                        <img src="{% static 'images/hiking-event.jpg' %}" class="card-img-top event-img" alt="let's Hike Event">
-                        <div class="event-date date-to-style" data-date = "2024-04-27">
-                        <span><span class="event-day">27 </span><span class="event-month">Apr</span></span>
-                        <hr>
-                        <span class="event-time">8:00 pm</span>
-                    </div>
-                    </a>
-                    </div>
-                    
-                    <div class="card-body">
-                        <h5 class="card-title mt-5">Let's Hike Together</h5>
-                        <p class="card-text text-black-50">Embark on an unforgettable hiking journey to conquer the summit of Büyük Camlica Hill.
-                             Experience breathtaking views, diverse wildlife, and camaraderie. Join us for adventure!</p>
-                        <div class="info-list">
-                            <a href="#"><button type="button" class="main-btn more-info-btn">More Info</button></a>
-            
-                        </div>
-                </div>
-            </div>
-            <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
-                <div class="image-wrapper">
-                    <a href="#">
-                <img src="{% static 'images/run-for-fun-event.jpg' %}" class="card-img-top event-img" alt="Running event">
-                <div class="event-date date-to-style" data-date = "2024-06-20">
-                <span><span class="event-day">20 </span><span class="event-month">Jun</span></span>
-                <hr>
-                <span class="event-time">3:30 pm</span>
-            </div>
-            </a>
-            </div>
-            
-            <div class="card-body">
-                <h5 class="card-title mt-5">Run For Fun</h5>
-                <p class="card-text text-black-50">Gear up for an exhilarating urban adventure at the "Urban Rush: Istanbul City Marathon.
-                    " Join thousands of runners as we race through iconic landmarks and vibrant neighborhoods of Istanbul.</p>
-                <div class="info-list">
-                    <a href="#"><button type="button" class="main-btn more-info-btn">More Info</button></a>
-    
-                </div>
-        </div>
-    </div>
-        <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "sport">
-            <div class="image-wrapper">
-                <a href="#">
-            <img src="{% static 'images/volley-ball-event.jpg' %}" class="card-img-top event-img" alt="volleyBall match Event">
-            <div class="event-date date-to-style" data-date = "2024-04-30">
-            <span><span class="event-day">30 </span><span class="event-month">Apr</span></span>
-            <hr>
-            <span class="event-time">7:00 pm</span>
-        </div>
-        </a>
-        </div>
-        
-        <div class="card-body">
-            <h5 class="card-title mt-5">VolleyBall Match</h5>
-            <p class="card-text text-black-50">Dive into the excitement of beach volleyball at the "Bosphorus Beach Volleyball Bash"!
-                 Join us for an action-packed match on the sandy shores of Istanbul's iconic Bosphorus coastline.</p>
-            <div class="info-list">
-                <a href="#"><button type="button" class="main-btn more-info-btn">More Info</button></a>
 
-            </div>
-    </div>
+          {% for EventActivity in activity reversed %}
+          {% if EventActivity.approved %}
+          <div class="card p-0 col-md-4 col-lg-3 event-card card-to-filter text-center" data-category = "{{ EventActivity.categories }}">
+                      <div class="image-wrapper">
+                          <a href="{% url 'eventPage' pk=EventActivity.id %}">
+                      <img src="{{ EventActivity.event_image.url }}" class="card-img-top event-img" alt="{{ EventActivity.eventtitle }}">
+                      <div class="event-date date-to-style" data-date = "{{ EventActivity.date }}">
+                      <span><span class="event-day">{{ EventActivity.date.day }}</span><span class="event-month">{{ EventActivity.date|date:"M" }}</span></span>
+                      <hr>
+                      <span class="event-time">{{ EventActivity.time|time:"h:i A" }}</span>
+                  </div>
+                  </a>
+                  </div>
+                  
+                  <div class="card-body">
+                      <h5 class="card-title mt-5">{{EventActivity.eventtitle}}</h5>
+                      <p class="card-text text-black-50">{{EventActivity.description|truncatewords:20}}</p>
+                      <div class="info-list">
+                          <a href="{% url 'eventPage' pk=EventActivity.id %}"><button type="button" class="main-btn more-info-btn">More Info</button></a>
+                      </div>
+              </div>
+          </div>
+          {% endif %} 
+        {% endfor %}
     </div>
         </div>
       </div>
@@ -295,24 +255,15 @@
       <div class="event-posts-container">
        <i onclick="movePrevious()" class="fa-solid fa-less-than"></i>
        <div class="event-posts-slider">
+        {% for post in post %}
+        {% if post.approved %}
         <div class="profile-post-card">
-        <img src="https://www.colorado.edu/program/data-science/sites/default/files/styles/large/public/slider/img_0146_0.jpg?itok=IVE2eqdQ">
-        <h3 class="event-post-title">From our Hiking Event</h3>
-        <p class="event-post-description">Memories made on the trail! 🌲🥾 Check out this snapshot of our students embracing nature's beauty during our recent hike.
-            Adventure awaits! 📸✨ #Hiking #NatureLovers</p>
+        <img src="{{ post.image.url }}">
+        <h3 class="event-post-title">{{ post.eventtitle }}</h3>
+        <p class="event-post-description">{{ post.postdescription }}</p>
        </div>
-       <div class="profile-post-card">
-        <img src="#">
-        <h3 class="event-post-title">From our </h3>
-        <p class="event-post-description">Memories made on the trail! 🌲🥾 Check out this snapshot of our students embracing nature's beauty during our recent hike.
-            Adventure awaits! 📸✨ #Hiking #NatureLovers</p>
-       </div>
-       <div class="profile-post-card">
-        <img src="https://www.colorado.edu/program/data-science/sites/default/files/styles/large/public/slider/img_0146_0.jpg?itok=IVE2eqdQ">
-        <h3 class="event-post-title">Hiking  cfcd Event</h3>
-        <p class="event-post-description">Memories made on the trail! 🌲🥾 Check out this snapshot of our students embracing nature's beauty during our recent hike.
-            Adventure awaits! 📸✨ #Hiking #NatureLovers</p>
-       </div>
+        {% endif %} 
+       {% endfor %}
        </div>
        
        <i onclick="moveNext()" class="fa-solid fa-greater-than"></i>
